--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["diff", "json", "serde", "serde_json"]
 
 [dependencies]
 clap = { version = "4", features = ["derive"], optional = true }
+derive_builder = "0.20.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = { version = "1", optional = true }
