--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ repository = "https://github.com/amanbolat/json_diff_rs"
 keywords = ["diff", "json", "serde", "serde_json"]
 
 [dependencies]
+approx = "0.5.1"
 clap = { version = "4", features = ["derive"], optional = true }
 derive_builder = "0.20.2"
+nom = "7.1.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = { version = "1", optional = true }
