--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["diff", "json", "serde", "serde_json"]
 
 [dependencies]
 approx = "0.5.1"
+chrono = "0.4.38"
 clap = { version = "4", features = ["derive"], optional = true }
 derive_builder = "0.20.2"
 nom = "7.1.3"
